http://bugzilla.zimbra.com/show_bug.cgi?id=10182 Bug: 10182 Fix widths of DwtSelect on IE

--- a/Ajax/WebRoot/js/config/style/dwt.css
+++ b/Ajax/WebRoot/js/config/style/dwt.css
@@ -310,13 +310,23 @@
 	@TableFixed@
 }
 
+/* Turns off fixed width of button */
+.DwtSelectComposite .DwtButton,
+.DwtSelectComposite .DwtButton-activated,
+.DwtSelectComposite .DwtButton-triggered,
+.DwtSelectComposite .DwtButton-disabled {
+	width:auto;
+}
+
+/* Makes sure the button is stretched to fit its container */
 .DwtSelectComposite .DwtButton table,
 .DwtSelectComposite .DwtButton-activated table,
 .DwtSelectComposite .DwtButton-triggered table,
 .DwtSelectComposite .DwtButton-disabled table {
 	@CompactTable@
-	@TableFixed@
+	width:100%;
 }
+
 
 .DwtSelectComposite {
 }
@@ -329,14 +339,6 @@
 	margin-right:12; /* Adds space to account for the dropdown cell in the button */
 }
 
-/* Makes sure the button is stretched to fit its container */
-.DwtSelectComposite .DwtButton table,
-.DwtSelectComposite .DwtButton-disabled table,
-.DwtSelectComposite .DwtButton-triggered table,
-.DwtSelectComposite .DwtButton-activated table,
-.DwtSelectComposite .DwtButton-active table {
-	width:100%;
-}
 
 
 /*
